# testfwk_developer_test

./: OAT.xml  README.md  README_zh.md  bundle.json  install.sh  ohos.build  ohtest
adapter/: LICENSE
adapter/aw/python/: test_adapter_tools.py
adapter/examples/studentmgr/test/common/shell/java/: AndroidManifest.xml  BUILD.gn
adapter/examples/studentmgr/test/common/shell/java/res/values/: strings.xml
adapter/examples/studentmgr/test/common/shell/java/resources/base/element/: strings.json
adapter/examples/studentmgr/test/common/shell/java/src/ohos/zunit/: MainAbilityShellActivity.java  TestApplication.java
adapter/examples/test/systemtest/common/scenes_common/AbilityDelegatorSt/: BUILD.gn  sdk.gni  test_abilitydelegator.p7b
adapter/examples/test/systemtest/common/scenes_common/AbilityDelegatorSt/shell/: AndroidManifest.xml  BUILD.gn
adapter/examples/test/systemtest/common/scenes_common/AbilityDelegatorSt/shell/java/com/ohos/aa/st/abilitydelegator/: PageAbilityShellActivity.java  SecondAbilityShellActivity.java  ShellAbilityDelegatorSt.java  ThirdAbilityShellActivity.java
adapter/examples/test/systemtest/common/scenes_common/AbilityDelegatorSt/shell/res/values/: strings.xml
adapter/examples/test/systemtest/common/scenes_common/AbilityDelegatorSt/src/main/: config.json
adapter/examples/test/systemtest/common/scenes_common/AbilityDelegatorSt/src/main/java/com/ohos/aa/st/abilitydelegator/: AbilityDelegatorBaseTest.java  AbilityDelegatorEventTest.java  AbilityMonitorTest.java  AbilitySliceTest.java  Global.java  PageAbility.java  SecondAbility.java  StopAbilityTest.java  ThirdAbility.java
adapter/examples/test/systemtest/common/scenes_common/AbilityDelegatorSt/src/main/java/com/ohos/aa/st/abilitydelegator/slice/: PageAbilitySlice.java  SecondAbilitySlice.java  ThirdAbilitySlice.java
aw/cxx/distributed/: BUILD.gn  distributed.h  distributed_agent.cpp  distributed_agent.h  distributed_cfg.cpp  distributed_cfg.h  distributed_major.cpp  distributed_major.h
aw/cxx/hwext/: BUILD.gn  perf.cpp  perf.h
config/: filter_config.xml  framework_config.xml  user_config.xml
examples/: BUILD.gn  ohos.build
examples/app_info/: BUILD.gn
examples/calculator/: BUILD.gn
examples/calculator/src/: calculator.cpp
examples/calculator/test/: BUILD.gn
examples/detector/: BUILD.gn
examples/detector/src/: detector.cpp
examples/distributedb/test/: BUILD.gn
examples/sleep/src/: sleep_ex.cpp
examples/sleep/test/: xDevice_test_report_demo.xml
examples/stagetest/actsbundlemanagerstagetest/: BUILD.gn
examples/studentmgr/: BUILD.gn
examples/studentmgr/src/com/ohos/demo/application/: StudentMgr.java
examples/studentmgr/src/com/ohos/demo/model/: Calculator.java
examples/studentmgr/src/com/ohos/demo/service/: Istudent.java
examples/studentmgr/summator/: BUILD.gn
examples/studentmgr/summator/include/: IParser.h  Summator.h
examples/studentmgr/summator/src/: Summator.cpp
examples/studentmgr/summator/test/include/: ParserMock.h
examples/studentmgr/summator/test/unittest/common/: BUILD.gn  summator_compute_test.cpp
examples/studentmgr/test/: BUILD.gn
examples/studentmgr/test/performance/: BUILD.gn
examples/studentmgr/test/performance/src/com/ohos/demo/test/model/: PerformanceTest.java
examples/studentmgr/test/unittest/: BUILD.gn
examples/studentmgr/test/unittest/src/com/ohos/demo/test/: BaseJunit.java
examples/studentmgr/test/unittest/src/com/ohos/demo/test/model/: CalculatorTest.java
examples/studentmgr/test/unittest/src/com/ohos/demo/test/service/: EasyMockStudentMgrTest.java
examples/test/systemtest/: BUILD.gn
libs/arkts1.2/: @ohos.app.ability.AbilityStage.ets  @ohos.app.ability.UIAbility.ets  @ohos.app.ability.Want.ets  @ohos.app.ability.abilityDelegatorRegistry.ets  @ohos.hilog.ets  @ohos.systemDateTime.ets  AbilityDelegator.ets  AbilityDelegatorArgs.ets  AbilityMonitor.ets  AbilityStageMonitor.ets  BUILD.gn  ShellCmdResult.ets  build_test.py
libs/benchmark/: README_zh.md
libs/benchmark/report/: benchmark_reporter.py  generate_report.py
libs/benchmark/template/: benchmark_detail.html  benchmark_summary.html
libs/fuzzlib/: DTFuzz README.md  README_zh.md  fuzzer_helper.py
libs/fuzzlib/tools/: colored.py  run_result.py  templates.py
localCoverage/: all_subsystem_config.json  coverage_tools.py  utils.py
localCoverage/automate_execute/: build_part.py  install_coverage_tools.py
localCoverage/codeCoverage/: codeCoverage_gcov_lcov.py  llvm-gcov.sh  mutilProcess_CodeCoverage.py
localCoverage/interfaceCoverage/: get_innerkits_json.py  interfaceCoverage_gcov_lcov.py  makeReport.py  make_report.py
localCoverage/keyword_registration/: keyword_filter.py
localCoverage/push_coverage_so/: push_coverage.py
localCoverage/resident_service/: init_gcov.py  public_method.py  pull_service_gcda.py  system_part_service.json
localCoverage/resident_service/resources/: gcov_flush.sh  sign.cpp
localCoverage/restore_comment/: after_lcov_branch.py  build_before_generate.py  build_befrore_lcov_branch.py  restore_source_code.py
local_coverage/: all_subsystem_config.json  coverage_tools.py  utils.py
local_coverage/automate_execute/: build_part.py  coverage.sh  install_coverage_tools.py
local_coverage/code_coverage/: code_coverage_gcov_lcov.py  llvm-gcov.sh  multiprocess_code_coverage.py
local_coverage/code_coverage/coverage_rc/: lcovrc_cov_template
local_coverage/interface_coverage/: get_innerkits_json.py  interfaceCoverage_gcov_lcov.py  interface_coverage_gcov_lcov.py  make_report.py
local_coverage/keyword_registration/: keyword.json  keyword_filter.py
local_coverage/push_coverage_so/: push_coverage.py
local_coverage/resident_service/: init_gcov.py  public_method.py  pull_service_gcda.py  system_part_service.json
local_coverage/restore_comment/: after_lcov_branch.py  build_before_generate.py  restore_source_code.py
precise_compilation/: part_tdd.json
src/: init.sh
src/__main__/: ohtest
src/core/: __init__.py  _init_global_config.py  common.py  constants.py  utils.py
src/main/: __main__.py  _init_global_config.py
(+133 files in other folders)
