# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/ohos/rules.gni")

java_library("studentmgr_java") {
  java_files = [
    "./src/com/ohos/demo/service/Istudent.java",
    "./src/com/ohos/demo/application/StudentMgr.java",
  ]
}

java_library("calculator_java") {
  java_files = [ "./src/com/ohos/demo/model/Calculator.java" ]
}

ohos_maple_java("studentmgr_maple_java") {
  deps = [ ":studentmgr_java" ]
  so_name = "studentmgr_maple_java"
  output_dir = "$root_build_dir/subsystem_examples/"
}

ohos_maple_java("calculator_maple_java") {
  deps = [ ":calculator_java" ]
  so_name = "calculator_maple_java"
  output_dir = "$root_build_dir/subsystem_examples/"
}

group("studentmgr") {
  deps = [
    ":calculator_maple_java",
    ":studentmgr_maple_java",
  ]
}
