# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# import("//build/test.gni")
# import("//foundation/ability/ability_base/ability_base.gni")

config("base_private_config") {
  visibility = [ ":*" ]
}

action("arkts_global_pre_build") {
  script = "../../src/core/arkts_tdd/toolchain_hypium_build.py"
  outputs = [ "$target_gen_dir/arkts_global_pre_build.stamp" ]
}