# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")

module_output_path = "test_subsystem_examples/studentmgr/submodule"

###############################################################################
ohos_java_performancetest("perf_test_dex_java_maple") {
  java_files = [ "./src/com/ohos/demo/test/model/PerformanceTest.java" ]
  deps = [ "//test/developertest/examples/studentmgr:calculator_java" ]

  sub_output_dir = module_output_path
}

ohos_java_performancetest("perf_test_no_config_app_java_maple") {
  test_as_app = true
  sub_output_dir = module_output_path

  java_files = [ "./src/com/ohos/demo/test/model/PerformanceTest.java" ]

  deps = [
    "//test/developertest/examples/studentmgr:calculator_java",

    # customize hap ability
    "//test/developertest/adapter/examples/studentmgr/test/common/main/java:test_customize_hap_ability_java",

    # common from test subsystem
    "//test/developertest/libs/jtr/main/java:test_app_executor_java",
  ]

  hap_profile = "//test/developertest/adapter/examples/studentmgr/test/common/main/java/config.json"

  entry_app_dep = [ "//test/developertest/adapter/examples/studentmgr/test/common/shell/java:customize_shell_app" ]
}

group("performance") {
  testonly = true
  deps = [
    ":perf_test_dex_java_maple",
    ":perf_test_no_config_app_java_maple",
  ]
}
