# Copyright (c) 2021 Huawei Device Co., Ltd.
# Copyright (C) 2013 The Android Open Source Project
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/ohos/rules.gni")

java_library("test_customize_shell_java") {
  emma_never_instrument = true
  java_files = [
    "./src/ohos/zunit/TestApplication.java",
    "./src/ohos/zunit/MainAbilityShellActivity.java",
  ]
  final_jar_path = "$root_out_dir/test_platform/libs/test_customize_shell_java.jar"
  aosp_deps = [ "maple:framework" ]
  deps =
      [ "//test/developertest/libs/jtr/shell/java:test_app_shell_context_java" ]

  external_deps = [
    "ability:abilitykit_java",
    "aafwk:intent_java",
    "appexecfwk:abilityshell_java",
    "appexecfwk:appexecfwk_java",
    "appexecfwk:appexecfwk_base_java",
    "hilog:hilog_java",
    "intent:intent_java",
  ]

  external_deps += [
    "ability:abilitykit_java_maple",
    "aafwk:intent_java_maple",
    "appexecfwk:abilityshell_java_maple",
    "appexecfwk:appexecfwk_java_maple",
    "appexecfwk:appexecfwk_base_java_maple",
    "hilog:hilog_maple_java",
    "intent:intent_java_maple",
  ]
}

ohos_assets("customize_shell_assets") {
  sources = []
}

ohos_resources("customize_shell_res") {
  resource_dirs = [ "./res" ]
  custom_package = "ohos.customize"
}

############### build test app begin ####################
ohos_app("customize_shell_app") {
  #java_files = []
  deps = [
    ":customize_shell_assets",
    ":customize_shell_res",
    ":test_customize_shell_java",
  ]
  subsystem_name = "subsystem_examples"
  manifest = "./AndroidManifest.xml"
  app_name = "customize_Entry_app"
}
############### build test app end ####################
