# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("sdk.gni")

############### build main aa bengin ####################
MAIN_SRC_PATH = "src/main/java/com/ohos/aa/st/abilitydelegator"
TEST_FILE_PATH = "src/main/java/com/ohos/aa/st/abilitydelegator"

test_files = [
  # test files must be ended with "Test"
  "$TEST_FILE_PATH/AbilityDelegatorBaseTest.java",
  "$TEST_FILE_PATH/AbilityDelegatorEventTest.java",

  #"$TEST_FILE_PATH/AbilityMonitorTest.java",
  "$TEST_FILE_PATH/StopAbilityTest.java",
  "$TEST_FILE_PATH/AbilitySliceTest.java",
]

java_library("main_java") {
  java_files = [
    # abilityslice
    "$MAIN_SRC_PATH/slice/PageAbilitySlice.java",
    "$MAIN_SRC_PATH/slice/SecondAbilitySlice.java",
    "$MAIN_SRC_PATH/slice/ThirdAbilitySlice.java",

    # constants
    "$MAIN_SRC_PATH/Global.java",

    # ability
    "$MAIN_SRC_PATH/PageAbility.java",
    "$MAIN_SRC_PATH/SecondAbility.java",
    "$MAIN_SRC_PATH/ThirdAbility.java",
  ]

  classpath_deps = [ "//utils/java:utils_java" ]

  if (is_double_framework) {
    aosp_deps = [ "maple:framework" ]
  }

  external_deps = java_external_deps
}

#
#ohos_resources("main_res") {
#    resource_dirs = [
#        "./src/main/resources",
#    ]
#    custom_package = "com.ohos.aa.st.api"
#
#    hap_profile = "./src/main/config.json"
#}
############### build main aa end ##################

############### build hap begin ####################
ohos_java_systemtest("build_abilitdelegator_st_hap") {
  java_files = test_files

  deps = [
    ":main_java",

    #":main_res",
    "//utils/java:utils_maple_java",
  ]

  external_deps = maple_external_deps

  hap_profile = "./src/main/config.json"

  entry_app_dep = [ "./shell:build_ability_delegator_st_app" ]

  certificate_profile = "test_abilitydelegator.p7b"

  hap_name = "AbilityDelegatorSt"

  subsystem_name = "aafwk"

  sub_output_dir = "test_subsystem_examples/studentmgr"
}

############### build hap end ####################

group("systemtest") {
  testonly = true
  deps = [ ":build_abilitdelegator_st_hap" ]
}
