# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

maple_external_deps = [
  "ability:abilitydelegation_java_maple",
  "ability:abilitykit_base_java_maple",
  "ability:abilitykit_java_maple",
  "ans:notification_base_java_maple",
  "ans:notification_kit_java_maple",
  "appdatamgr:appdatafwk_base_maple_java",
  "appexecfwk:abilityshell_java_maple",
  "appexecfwk:appexecfwk_base_java_maple",
  "appexecfwk:appexecfwk_java_maple",
  "appexecfwk:eventhandler_java_maple",
  "communication:ipc_maple_java",
  "distributedschedule:samgr_java_maple",
  "distributedschedule:uri_java_maple",
  "global:kits_java",
  "graphic:agp_maple_java",
  "graphic:agpwindow_maple_java",
  "graphic:agpwindowkit_maple_java",
  "hilog:hilog_maple_java",
  "hilog:hilog_maple_java",
  "intent:intent_java_maple",
  "multimodalinput:mmi_event_maple_java",
]

java_external_deps = [
  "ability:abilitydelegation_java",
  "ability:abilitykit_base_java",
  "ability:abilitykit_java",
  "ans:notification_base_java",
  "ans:notification_kit_java",
  "appdatamgr:appdatafwk_base_java",
  "appexecfwk:abilityshell_java",
  "appexecfwk:appexecfwk_base_java",
  "appexecfwk:appexecfwk_java",
  "appexecfwk:eventhandler_java",
  "communication:ipc_java",
  "distributedschedule:samgr_java",
  "distributedschedule:uri_java",
  "global:kits_maple_java",
  "graphic:agp_java",
  "graphic:agpwindow_java",
  "graphic:agpwindowkit_java",
  "hilog:hilog_java",
  "intent:intent_java",
  "multimodalinput:mmi_event_java",
]
