# Copyright (c) 2021 Huawei Device Co., Ltd.
# Copyright (C) 2013 The Android Open Source Project
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/ohos/rules.gni")
import("//build/config/ohos/app_bundle.gni")

import("../sdk.gni")

SHELL_PATH = "java/com/ohos/aa/st/abilitydelegator"

############### build main aa begin ####################
java_library("shell_java") {
  java_files = [
    "$SHELL_PATH/PageAbilityShellActivity.java",
    "$SHELL_PATH/SecondAbilityShellActivity.java",
    "$SHELL_PATH/ShellAbilityDelegatorSt.java",
    "$SHELL_PATH/ThirdAbilityShellActivity.java",
  ]

  classpath_deps = [ "//utils/java:utils_java" ]

  if (is_double_framework) {
    aosp_deps = [ "maple:framework" ]
  }

  external_deps = java_external_deps
}

ohos_resources("shell_res") {
  resource_dirs = [ "res" ]
  custom_package = "com.ohos.aa.st.abilitydelegator"
}

############### build main aa end ####################

############### build application test begin ####################
ohos_app("build_ability_delegator_st_app") {
  java_files = []
  deps = [
    ":shell_java",
    ":shell_res",
    "//utils/java:utils_maple_java",
  ]

  external_deps = maple_external_deps

  manifest = "./AndroidManifest.xml"

  app_name = "Entry"

  module_install_dir = "priv-app/AbilityDelegatorSt"

  subsystem_name = "aafwk"
}
############### build application test end ####################
